fix align center CSS issue

--- a/wp-content/themes/eurokera/assets/scss/global/_wp-overrides.scss
+++ b/wp-content/themes/eurokera/assets/scss/global/_wp-overrides.scss
@@ -36,7 +36,7 @@ p.wp-caption-text{
 }
 
 .aligncenter {
-    // display:table;
+    display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
